[package]
name = "mopa"
version = "0.1.4"
authors = ["Chris Morgan <me@chrismorgan.info>"]
description = "My Own Personal Any: get your own Any with additional functionality"
#documentation = 
#homepage = 
repository = "https://github.com/chris-morgan/mopa"
readme = "README.md"
keywords = ["any", "macro"]
license = "MIT/Apache-2.0"
